libextutils-parsexs-perl (2.20-1) UNRELEASED; urgency=low

  * New upstream release
    + Various bug fixes
    + Added test for using an XS library
    + Now depends on Test::More 0.47, oldstable has 0.62
  * Standards-Version 3.8.2
  * Added /me to Uploaders and Copyright
  * Updated copyright statements

  [ gregor herrmann ]
  * debian/control: Changed: Switched Vcs-Browser field to ViewSVN
    (source stanza).
  * Remove Florian Ragwitz from Uploaders (closes: #523285).

  [ Nathan Handler ]
  * debian/watch: Update to ignore development releases.

 -- Jonathan Yu <frequency@cpan.org>  Fri, 03 Jul 2009 15:56:23 -0400

libextutils-parsexs-perl (2.19-1) unstable; urgency=low

  [ gregor herrmann ]
  * Take over for the Debian Perl Group with maintainer's permission
    (http://lists.debian.org/debian-perl/2008/06/msg00039.html)
  * debian/control: Added: Vcs-Svn field (source stanza); Vcs-Browser
    field (source stanza); Homepage field (source stanza). Changed:
    Maintainer set to Debian Perl Group <pkg-perl-
    maintainers@lists.alioth.debian.org> (was: Florian Ragwitz
    <rafl@debian.org>); Florian Ragwitz <rafl@debian.org> moved to
    Uploaders.
  * Add debian/watch.

  [ AGOSTINI Yves ]
  * upgrade to new upstream 2.19 (Closes: #485441, #485419)
  * add me to uploaders
  * Standards-Version: 3.8.0 (no changes)
  * refresh rules with architecture independent rules
  * debian/control: add libmodule-build-perl in Build-Depends
  * debian/copyright: Proposals/CopyrightFormat rev=102, add Perl Group

 -- AGOSTINI Yves <agostini@univ-metz.fr>  Sun, 15 Jun 2008 21:05:53 +0200

libextutils-parsexs-perl (2.15-2) unstable; urgency=low

  * Use Makefile.PL instead of Build.PL.
  * Remove libmodule-build-perl dependency (Closes: #385354).
  * Bump-up Standards-Version to 3.7.2 (no changes).
  * Use DH_COMPAT 5.

 -- Florian Ragwitz <rafl@debian.org>  Sat,  2 Sep 2006 15:21:03 +0200

libextutils-parsexs-perl (2.15-1) unstable; urgency=low
